# rast2vec-rs

./: .gitignore  Cargo.toml  makefile  readme.md
py/: config.json  main.py  utility.py
src/: config.rs  main.rs  pipeline.rs  utility.rs  vector.rs
src/cli/: cli.rs  commands.rs  config.rs  mod.rs  timer.rs
src/core/: coord.rs  equivalance.rs  graph.rs  img.rs  local.rs  mod.rs  partition.rs  plain.rs  polygon.rs  svg.rs  test.rs
src/rast2vec/: mod.rs
src/rast2vec/core/: partition.rs
src/rast2vec/space/: image_rgba.rs  mod.rs  pos_good.rs  position.rs  utility.rs  view.rs
src/rast2vec/utility/: color.rs  image5.rs  mod.rs  ndarray_image.rs
src/utility/: color.rs  debug.rs  mod.rs  rect.rs  vector.rs
