[package]
name = "rast2vec"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.6"
imageproc = { version = "0.23.0", features = ["display-window"] }
derive-new = "0.5.9"
clap = { version = "4.2.1", features = ["derive"] }
edge-detection = "0.2.6"
ndarray = "0.15.6"
ndarray-ndimage = "0.3.0"
ndarray-conv = "0.2.0"
lazy_static = "1.4.0"
svg = "0.13.1"
