[package]
name = "rast2vec"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
derive-new = "0.5.9"
smallvec = "1.10.0"

image = "0.24.6"
imageproc = { version = "0.23.0" }
# ndarray-image = "0.3.0"

svg = "0.13.1"
toml = "0.7.3"

ndarray = { version = "0.15.6", features = ["serde"] }
# nshare = "0.9.0"

strum = "0.24.1"
strum_macros = "0.24.3"

serde_cbor = "0.11.2"
serde_json = "1.0.95"

rusteval = "0.2.0"
# inquire = "0.6.1"

[profile.dev]
opt-level = 2
